Thu Jul 26 09:31:19 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * bin/make_release.py:
        * docs/Download.html:
        * docs/bczar/bczar.html:
          Updated for x.1.3 release

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
        * etc/index.html:
          Removed deprecated tag

Thu Jul 26 09:12:26 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.3 released.

Fri Jul 20 17:37:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ace/config-vxworks6.8.h:
        * ace/config-vxworks6.9.h:

          Changes to build for VxWorks 6.8 kernel mode.

        * bin/PerlACE/ProcessVX_Win32.pm:
        * tests/run_test.lst:

          Changes for VxWorks testing.

        * bin/PerlACE/TestTarget.pm

          Fixed a Perl bug (ne vs. !=).

Tue Jun 26 21:47:18 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/valgrind.supp:

          Made the suppression for dlopen more generic, so that it
          can work for different linux/glibc versions.

Tue Jun 26 13:18:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4055_Regression_Test.cpp:
          Added commented out way to get the hr time

Mon Jun 25 17:40:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4055_Regression_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added new unit test which currently fails. The ACE condition
          variables use an absolute timeout. If we for example wait for a
          timeout 3 seconds in the future and the system time is changed 10
          seconds back we are really waiting 13 seconds now. The ACE timer
          queues have support for using a monotonic time source using the